Documentar validación en Processing 4.5.6 (la más reciente)
Confirmado a mano: instalar CppModeDev, seleccionar C++ (dev), abrir el
ejemplo Width_and_Height, Play, y la ventana SDL2 del sketch compilado
se abre de verdad — en la última versión de Processing (4.5.6, UI
Compose Desktop), no solo en la 4.0.1 clásica.

De paso, documentada la forma de lanzar 4.5.6 en un sandbox sin sesión
gráfica completa: el lanzador nativo de jpackage fallaba (excepción de
módulos, o silenciosamente al intentar arreglarlo editando su .cfg);
funciona invocar directamente el JDK completo que trae empaquetado en
lib/app/resources/jdk/bin/java con el classpath/opciones de
Processing.cfg más --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED.
No es un problema de este proyecto, pero ahorra tiempo la próxima vez.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Rbb4SdBUGM6uopSuz9hP8i